# microservices-ecommerce

./: README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
db/: init.sql
order-service/: Dockerfile  app.py  test_app.py
product-service/: CMakeLists.txt  Dockerfile  main.cpp
